--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,7 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "require": {}
+    "require": {
+        "php": ">=7.4"
+    }
 }
